# Mermaid22

./: DESIGN.md  Dockerfile  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: bbox.py  cli.py  detect.py  docx_pipeline.py  imaging.py  logging_utils.py  pdf_pipeline.py  server.py
renderer/: render_mermaid.js
tests/: test_detect.py  test_pdf_pipeline.py
tests/data/: fixture2.txt  fixture3.txt  fixture4.txt  fixture5.txt
